syntax = "proto3";

option go_package = "DISYS_assigment_03/proto";

package proto;

service ChittyChat
{
    rpc Broadcast(ChatMessage) returns (ChatMessage);
}

message ChatMessage {
    string message = 1;
    int64 lamportTime = 2;
    int64 senderId = 3;
}